# kuzu-memory

./: .claudeignore  .env.local.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  <MagicMock name='get_project_db_path()' id='4540454800'>  <MagicMock name='get_project_db_path()' id='4549654384'>  <MagicMock name='get_project_db_path()' id='4551911776'>  <MagicMock name='get_project_db_path()' id='4617760992'>  =13.0.0  AGENTS.md  AUGMENT_RULES_GUIDE.md  BUGFIX_SUMMARY.md  BUILD_INFO  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CLI_CONSOLIDATION_TEST_RESULTS.md  CLI_REORGANIZATION_COMPLETE.md  CLI_REORGANIZATION_PLAN.md  CODE_STRUCTURE.md  COGNITIVE_TYPES_MIGRATION.md  COGNITIVE_TYPES_MIGRATION_SUMMARY.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DEMO_COMMANDS_FIXES.md  DEVELOPER.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENHANCEMENT_SUMMARY.md  GIT_SYNC_API_FIX_SUMMARY.md  GIT_USER_TAGGING_IMPLEMENTATION.md  HOMEBREW_FIX_INSTRUCTIONS.md  HOMEBREW_FIX_QUICKSTART.md  HOMEBREW_VERIFICATION_REPORT.md  INSTALLATION_SUMMARY.md  INSTALLER_DEPRECATION_SUMMARY.md  MCP_INSTALLER_IMPLEMENTATION_SUMMARY.md  MCP_MIGRATION_STRATEGY.md  MCP_PROTOCOL_VERSION_FIX.md  (+54 more)
.claude/: kuzu-memory-mcp.json  kuzu-memory-source  kuzu-memory.sh
.claude-mpm/: claude_code_config.json  config.json  mcp_config.json
.cursor/: mcp.json
.kuzu-memory-backups/: AGENTS.md.backup_20250925_121747  CLAUDE.md.backup_20250925_200301  CLAUDE.md.backup_20250926_181929  claude_desktop_config.json.backup_20250925_200301  config.json.backup_20250926_103819  kuzu-memory-integration.md.backup_20250925_121747  kuzu-memory-integration.md.backup_20251001_231747  memory-quick-reference.md.backup_20250925_121747
.makefiles/: release.mk
.mcp-vector-search/: config.json  index_metadata.json
Formula/: kuzu-memory.rb
Memory/: README.md
changelog.d/: 200.feature.md  201.bugfix.md  202.bugfix.md  203.feature.md  README.md  auto-update.enhancement.md  claude-hooks-event-fix.bugfix.md  cli-sentinel-params.bugfix.md  concurrent-access.bugfix.md  demo-command.feature.md  quickstart-steps.enhancement.md  sentinel-json-fix.bugfix.md  setup-command.feature.md  template.md
docs/: ACTIVITY_AWARE_TEMPORAL_DECAY.md  AI_INTEGRATION.md  ARCHITECTURE.md  AUGMENT_RULES_SETUP.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_INTEGRATION.md  CLAUDE_SETUP.md  DATABASE_LOCATIONS.md  FIX_ROADMAP.md  GETTING_STARTED.md  GIT_SYNC.md  GIT_USER_TAGGING.md  HOME_INSTALLATION.md  INSTALLATION_COMPARISON.md  INTEGRATION_SUMMARY.md  KNOWN_ISSUES.md  MCP_DIAGNOSTICS.md  MCP_PHASE5_IMPLEMENTATION_REPORT.md  MCP_TESTING_GUIDE.md  MEMORY_SYSTEM.md  PROJECT_ORGANIZATION.md  PUBLISHING.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  SIMPLE_AUGGIE_INTEGRATION.md  auggie_integration.md  bash-hooks-design.md  client-api-readme-snippet.md  client-api-summary.md  client-api.md  fail-fast-database-locking.md  integration-api-quick-reference.md  integration-guide.md  mcp-optimize-tool.md  memory-merge-implementation.md  migrations-framework.md  nlp_enhancements_summary.md  performance-test-fixes-2025-02-10.md  phase11_commands.md  (+7 more)
examples/: ai_assistant_with_auggie.py  auggie_integration_demo.py  basic_usage.py  client_usage.py  config.yaml  framework_integration_example.py  javascript_integration.js  kuzu-config-example.json  mcp_installer_adapter_example.py  nlp_classification_demo.py  nlp_sentiment_batch_demo.py  python_integration.py  shell_integration.sh  temporal-decay-config.json
kuzu-memories/: README.md  project_info.md
scripts/: README.md  README_PUBLISH.md  README_fix_mcp_config.md  check_performance_regression.py  consolidate-databases.py  debug_test_mcp_server.py  fix_mcp_config.py  (+18 more)
(+486 files in other folders)
